--- a/componentes/login/login.html
+++ b/componentes/login/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="../../css/config.css">
+    <link rel="stylesheet" href="/config/config.css">
 </head>
 <body>
     <!--entrada para usuario-->
