se completa para  hacer merge

--- a/componentes/formularioDeContacto/contacto.html
+++ b/componentes/formularioDeContacto/contacto.html
@@ -10,7 +10,7 @@
 <body>
     <div class="contenedor">
         <div class="formulario-contacto">
-            <h2>Contacto</h2>
+            <h2>Contacto.</h2>
             <form action="#">
                 <div class="grupo-formulario">
                     <label for="nombre">Nombre:</label>
